Fix horizontal rule alignment issue in printed scripts

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -461,6 +461,10 @@ img.imported-icon {
           .character-summary {
             vertical-align: middle;
             line-height: 1.4;
+            @media print {
+              line-height: 1.2;
+              font-size: 1.15rem;
+            }
           }
         }
       // }
@@ -889,7 +893,7 @@ h1 {
         background-color: white;
       }
       &::after {
-        top: 1.1rem;
+        top: 1.2rem;
         // border-top: 1px solid grey;
       }
     }
